WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
150661
Regression(
r191673
): [WIN][EFL][GTK] layout tests using data URLs time out
https://bugs.webkit.org/show_bug.cgi?id=150661
Summary
Regression(r191673): [WIN][EFL][GTK] layout tests using data URLs time out
Hunseop Jeong
Reported
2015-10-28 21:03:48 PDT
Many layout tests timeout after
r191673
.
Attachments
Patch
(3.14 KB, patch)
2015-10-28 22:15 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2015-10-28 21:34:08 PDT
I'll try and take a look now. My bet is that the Timer does not fire for some reason. Worse case scenario, we could keep calling callOnMainThread() instead of using a Timer for !PLATFORM(COCOA).
Chris Dumez
Comment 2
2015-10-28 22:15:01 PDT
Created
attachment 264299
[details]
Patch
Gyuyoung Kim
Comment 3
2015-10-28 22:20:22 PDT
Comment on
attachment 264299
[details]
Patch rs=me.
Chris Dumez
Comment 4
2015-10-28 22:21:36 PDT
Comment on
attachment 264299
[details]
Patch Clearing flags on attachment: 264299 Committed
r191720
: <
http://trac.webkit.org/changeset/191720
>
Chris Dumez
Comment 5
2015-10-28 22:21:42 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug