Regression(r191673): [WIN][EFL][GTK] layout tests using data URLs time out https://bugs.webkit.org/show_bug.cgi?id=150661

Reviewed by Gyuyoung Kim.

Do a partial revert of r191673. For some reason, using a Timer in
DataURLDecoder does not work (it does not fire). Since non COCOA ports
don't support RunLoopTimer, this patch reintroduces the use of
callOnMainThread() on non-COCOA ports.

* platform/network/DataURLDecoder.cpp:
(WebCore::DataURLDecoder::decode):
(WebCore::DataURLDecoder::DecodingResultDispatcher::startTimer): Deleted.

Canonical link: https://commits.webkit.org/168826@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191720 268f45cc-cd09-0410-ab3c-d52691b4dbfc